# YoftLang

./: .gitignore  README.md  demo.eng  engine.py  go.mod  languages.yml  main.go  pyproject.toml  setup.py  test.eng
compiler/ast/: ast.go
compiler/codegen/: codegen.go
compiler/lexer/: lexer.go
compiler/parser/: parser.go
docs/: engine.tmLanguage.json  index.html
docs/assets/css/: style.css
engine/: __init__.py  __main__.py  interpreter.py
engine_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/: control_flow.eng  fizzbuzz.eng  functions.eng  hello.eng  lists_strings.eng  variables.eng
examples/adventure/: game.eng  main.eng  utils.eng
quickstart/: CodingInEngine.md  about.md
