[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engine-lang"
version = "0.1.0"
description = "A fast and simple interpreted programming language"
readme = "README.md"
authors = [{name = "Engine Language Team"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Interpreters",
]
requires-python = ">=3.7"

[project.scripts]
engine = "engine.__main__:main"


[tool.setuptools.packages.find]
include = ["engine*"]
